--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
-<!doctype html>
-
-<html>
-  <head>
-  </head>
-
-  <body>
-    <p id="p"></p>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Шерзод</title>
+</head>
+<body>
+    <div id="info">Тебя зовут Шерзод. Если ты полностью выйдешь из сайта или из браузера я все равное тебя не забуду. Я взломал тебя!</div>
 
     <script>
 
-      let i = 0;
-    
-      let word = "Шерзода uzcard взломан, все деньги сняты.";
-      word = word.split('');
-
-      function animatedText() {
-        p.textContent += word[i];
-
-        if (i == word.length - 1) return;
-
-        i++;
-        setTimeout(animatedText, 120);
-      }
-
-      animatedText();
+        if (localStorage.getItem('id') == 3) {
+            info.textContent = 'Зайбал все я не играю';
+        }
+        if (localStorage.getItem('id') == 2) {
+            info.textContent = 'Ты не сможешь обмануть меня';
+            localStorage.setItem('id', 3);
+        }
+        if (localStorage.getItem('id') == 1) {
+            info.textContent = 'Я тебя не забыл Шерзод теперь я знаю тебя навседа';
+            localStorage.setItem('id', 2);
+        }
+        if (localStorage.getItem('id') == null) {
+            localStorage.setItem('id', 1);
+        }
 
     </script>
-  </body>
+</body>
 </html>
